--- a/azure-aks.yaml
+++ b/azure-aks.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: mypythondockerrepo
-        image: myacregi.azurecr.io/ShaRaf2512/NewAzureDevOpspipeline:#{Build.BuildId}#
+        image: myacregi.azurecr.io/ShaRaf2512/NewAzureDevOpspipeline
         ports:
         - containerPort: 5000
 # service type loadbalancer       
